syntax = "proto3";
package towerdefence.cc.service.player_tracker;

option java_package = "dev.emortal.api.service";
option java_outer_classname = "PlayerTrackerProto";
option go_package = "github.com/emortalmc/grpc-api-specs/gen/go/service/player_tracker";

import "google/protobuf/timestamp.proto";
import "common.proto";

service PlayerTracker {
  rpc GetPlayerServer(PlayerRequest) returns (GetPlayerServerResponse);
  rpc GetPlayerServers(PlayersRequest) returns (GetPlayerServersResponse); // mass retrieve servers for x... players

  rpc GetServerPlayers(ServerIdRequest) returns (GetServerPlayersResponse);

  rpc GetServerPlayerCount(ServerIdRequest) returns (GetServerPlayerCountResponse);
  rpc GetServerTypePlayerCount(ServerTypeRequest) returns (ServerTypePlayerCountResponse);
  rpc GetServerTypesPlayerCount(ServerTypesRequest) returns (ServerTypesPlayerCountResponse);
}

message PlayerRequest {
  string player_id = 1;
}

message PlayersRequest {
  repeated string player_ids = 1;
}

message GetPlayerServerResponse {
  optional OnlineServer server = 1;
}

message GetPlayerServersResponse {
  map<string, OnlineServer> player_servers = 1; // Is they are not online, they will not be included in the map.
}

message ServerIdRequest {
  string server_id = 1;
}

message GetServerPlayersResponse {
  repeated OnlinePlayer online_players = 1;
}

message OnlinePlayer {
  string player_id = 1;
  string username = 2;
}

// Represents a server a player is online on, proxy and regular.
message OnlineServer {
  string server_id = 1;
  string proxy_id = 2;
}

message GetServerPlayerCountResponse {
  uint32 player_count = 1;
}

message ServerTypeRequest {
  dev.emortal.model.ServerType server_type = 1;
}

message ServerTypePlayerCountResponse {
  uint32 player_count = 1;
  google.protobuf.Timestamp last_updated = 2;
}

message ServerTypesRequest {
  repeated dev.emortal.model.ServerType server_types = 1;
}

message ServerTypesPlayerCountResponse {
  map<string, uint32> player_counts = 1;
  google.protobuf.Timestamp last_updated = 2;
}